# Skills_Programming

./: .gitignore  CV_Upload.py  README.md  Structure.ipynb  Structure_Parser.py  app.py  main.py  pyproject.toml  scorer.py
