[project]
name = "skills-programming"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.99.0",
    "beautifulsoup4>=4.14.3",
    "chromedriver-autoinstaller>=0.6.4",
    "pathlib>=1.0.1",
    "pdfplumber>=0.11.9",
    "pypdf>=6.12.1",
    "python-docx>=1.2.0",
    "requests>=2.33.1",
    "selenium>=4.44.0",
]
